_sass/git-wiki-style.scss
@import "fonts";
@import "rouge-github";
@import "w3.scss";

body {
  background-color: #131823;
  padding: 50px;
  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #f7f7f7;
  font-weight: 400;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #fff;
  margin: 0 0 20px;
}

p,
ul,
ol,
table,
pre,
dl {
  margin: 0 0 20px;
}

h1,
h2,
h3 {
  line-height: 1.1;
}

h1 {
  font-size: 28px;
}

h2 {
  color: #ffffff;
}

h3,
h4,
h5,
h6 {
  color: #ffffff;
}

a {
  color: #39c;
  text-decoration: none;
}

a:hover {
  color: #069;
}

a small {
  font-size: 11px;
  color: #777;
  margin-top: -0.3em;
  display: block;
}

a:hover small {
  color: #777;
}

.wrapper {
  /*width:860px;*/
  margin: 0 auto;
}

blockquote {
  border-left: 3px solid #1b7db9;
  margin: 0;
  padding: 0 0 0 14px;
  font-style: italic;
}

code,
pre {
  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color: #333;
  font-size: 12px;
}

pre {
  padding: 8px 15px;
  background: #0b0e15;
  border-radius: 5px;
  box-shadow: 0 0 1px #1b7db9;
  border: 1px solid #1b7db9;
  overflow-x: auto;
}

code {
  background-color: #f8f8f8;
  padding: 3px;
  border-radius: 3px;
}

pre code {
  background-color: #0b0e15;
  color: #d8d8d8;
}

table {
  width: 100%;
  border-collapse: collapse;
}

th,
td {
  text-align: left;
  padding: 5px 10px;
  border-bottom: 1px solid #e5e5e5;
}

dt {
  color: #444;
  font-weight: 700;
}

th {
  color: #444;
}

img {
  max-width: 100%;
}

.w3-teal {
  color: #000 !important;
  background-color: inherit !important;
}

.git-wiki-search-js {
  padding: 6px 0;
}

#search-input {
  background-color: #10141d;
  border-radius: 4px;
  border: 1px solid #080a0e;
  color: white;
  padding: 2px 4px;
  width: 100%;
  max-width: 280px;
}

#search-input:focus {
  outline: none;
  border-color: #1b7db9;
  box-shadow: 0 0 1px #1b7db9;
}

#search-input ::placeholder {
  color: #dbd9d9;
}

#git-wiki-mobile-header {
  position: fixed;
  top: 0;
  height: 55px;
  background-color: white;
  width: 100%;
  border-bottom: 1px solid;
  border-radius: 10px;
  z-index: 999;
}

#git-wiki-sidebar {
  width: 280px !important;
  float: left;
  position: relative !important;
  -webkit-font-smoothing: subpixel-antialiased;
  /*overflow-y: auto;
  overflow-x: auto;*/
  max-height: 100%;
  padding-bottom: 55px !important;
}

@media print,
screen and (max-width: 992px) {
  #git-wiki-sidebar {
    position: fixed !important;
    top: 50px;
    border-right: 1px solid;
    border-bottom: 1px solid;
    border-radius: 10px;
  }

  .git-wiki-page {
    margin-top: 60px;
  }
}

.git-wiki-main-logo {
  max-width: 270px;
}

#git-wiki-sidebar .git-wiki-downloads {
  list-style: none;
  height: 40px;
  padding: 0;
  background: #f4f4f4;
  border-radius: 5px;
  border: 1px solid #e0e0e0;
  width: 270px;
}

#git-wiki-sidebar .git-wiki-downloads li {
  width: 89px;
  float: left;
  border-right: 1px solid #e0e0e0;
  height: 40px;
}

#git-wiki-sidebar .git-wiki-downloads li:first-child a {
  border-radius: 5px 0 0 5px;
}

#git-wiki-sidebar .git-wiki-downloads li:last-child a {
  border-radius: 0 5px 5px 0;
}

#git-wiki-sidebar .git-wiki-downloads a {
  line-height: 1;
  font-size: 11px;
  color: #999;
  display: block;
  text-align: center;
  padding-top: 6px;
  height: 34px;
}

#git-wiki-sidebar .git-wiki-downloads a:hover {
  color: #999;
}

#git-wiki-sidebar .git-wiki-downloads a:active {
  background-color: #f0f0f0;
}

strong {
  color: #fff;
  font-weight: 700;
}

#git-wiki-sidebar .git-wiki-downloads li+li+li {
  border-right: none;
  width: 89px;
}

#git-wiki-sidebar .git-wiki-downloads a strong {
  font-size: 14px;
  display: block;
  color: #fff;
}

.git-wiki-page {
  /*width:500px;
  float:right;*/
  padding-left: 320px;
  padding-bottom: 50px;
}

small {
  font-size: 11px;
}

hr {
  border: 0;
  background: #e5e5e5;
  height: 1px;
  margin: 0 0 20px;
}

footer {
  padding-left: 320px;
  float: left;
  bottom: 50px;
  -webkit-font-smoothing: subpixel-antialiased;
}

.tools-element {
  border-left: #ffffff;
  border-left-style: solid;
  padding-left: 10px;
  padding-right: 10px;
}

@media print,
screen and (max-width: 960px) {

  div.wrapper {
    width: auto;
    margin: 0;
  }

  #git-wiki-sidebar,
  .git-wiki-page,
  footer {
    float: none;
    position: static;
    width: auto;
  }

  #git-wiki-sidebar {
    padding-right: 320px;
  }

  .git-wiki-page,
  footer {
    border: 1px solid #e5e5e5;
    border-width: 1px 0;
    padding: 20px 0;
    margin: 60px 0 20px;
  }

  #git-wiki-sidebara small {
    display: inline;
  }

  /*#git-wiki-sidebar .git-wiki-downloads {
    position:absolute;
    right:50px;
    top:52px;
  }*/
}


@media print,
screen and (max-width: 720px) {
  body {
    word-wrap: break-word;
  }

  #git-wiki-sidebar {
    padding: 0;
  }

  #git-wiki-sidebar .git-wiki-downloads,
  #git-wiki-sidebarp.view {
    position: static;
  }

  pre,
  code {
    word-wrap: normal;
  }
}

@media print,
screen and (max-width: 480px) {
  body {
    padding: 15px;
  }

  #git-wiki-sidebar .git-wiki-downloads {
    width: 99%;
  }

  #git-wiki-sidebarli,
  #git-wiki-sidebar .git-wiki-downloads li+li+li {
    width: 33%;
  }
}

@media print {
  body {
    padding: 0.4in;
    font-size: 12pt;
    color: #444;
  }
}

/*
  Pagination rules
*/

.pagination a,
.pagination span {
  padding: 7px 18px;
  border: 1px solid #eee;
  margin-left: -2px;
  margin-right: -2px;
  background-color: #ffffff;
  display: inline-block;
}

.pagination a {
  &:hover {
    background-color: #f1f1f1;
    color: #333;
  }
}

.pagination {
  text-align: center;
}

.post-item {
  margin-bottom: 50px;
}

#results-container li {
  list-style-type: none;
}

.external-link {
  background-position: center right;
  background-repeat: no-repeat;
  background-image: url("../images/external-link-ltr-icon.png");
  background-image: linear-gradient(transparent, transparent), url("../images/external.svg");
  padding-right: 13px;
}

